Pulling the guidewire through the API module and hitting S3 behind the scenes (#7)
* Add a simple root handler to self-report the version

This will help with healthchecking

* Embed swagger-ui v5.11.8 and configure to load the openapi spec directly

* Starting to pull through the API requests to the backing store

This change also re-arranges the code a little bit to allow for easily
running ./scripts/live-reload

* Force this type into u64
